--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -3,6 +3,26 @@
 
 <head>
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #FF0000;
+            height: 70px;
+            width: 100%;
+        }
+
+        footer {
+            background-color: #00FF00;
+            height: 60px;
+            width: 100%;
+            text-align: center;
+            line-height: 50px;
+            position: absolute;
+            bottom: 0px;
+        }
     </style>
 </head>
 
