--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -18,17 +18,25 @@
             background-color: #00FF00;
             height: 60px;
             width: 100%;
-            text-align: center;
-            line-height: 50px;
-            position: absolute;
+            position: fixed;
             bottom: 0px;
+        }
+        .centered_text {
+            top: 50%;
+            left: 50%;
+            position: absolute;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
 
 <body>
     <header></header>
-    <footer>Holberton School</footer>
+    <footer>
+        <div class="centered_text">
+            Holberton School
+        </div>
+    </footer>
 </body>
 
 </html>
